# OpenSucker

./: .gitignore  .gitmodules  AGENTS.md  README.md  TEST_CASES.md  package-lock.json  package.json  要求.md
backend/: .env.example  .gitignore  AGENTS.md  agent.py  agent.sh  database.py  pyproject.toml  requirements-dev.txt  requirements-vibe.txt  requirements.txt
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/core/: agentnet.py  config.py  document_fetcher.py  events.py  llm.py  scoring_config.py  search.py  security.py
backend/app/db/: session.py
backend/app/domains/counters/: schemas.py  service.py
backend/app/domains/orders/: schemas.py  (+1 more)
backend/app/graphs/: risk_workflow.py  skill_distillation.py  trading_personality_workflow.py
backend/app/models/: schemas.py
backend/app/services/: anet_register.py  risk_engine.py  sample_data.py  skill_distill.py
backend/app/utils/: datetime_utils.py  validators.py
backend/data/: annotations_hotpepper_ladys_v2.jsonl  annotations_hotpepper_mens_v2.jsonl  questions.json  questions.md
backend/docs/: agent-network-integration.md  agent-network-proof.md  architecture.md
backend/modules/: __init__.py  function_calling_engine.py  intent.py  llm.py  skills_manager.py  tool_dispatcher.py  tool_schemas.py  user_profile.py  vibe_tools.py  xy_prompts.py
backend/scripts/: anet_register.py  batch_distill.py  init_db.py  people.json
backend/tests/test_api/: test_health.py  test_play.py
backend/tests/test_domains/: test_skills.py
backend/tests/test_services/: test_agentnet.py  test_risk_engine.py
(+201 files in other folders)
